<resources>
    <string name="app_name">NikFileManager</string>
    <string name="storage">Storage</string>
    <string name="external">External</string>
    <string name="files">Files</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="internal">internal</string>
    <string name="used">Used</string>
    <string name="free">Free</string>
    <string name="items">items</string>
    <string name="recent_files">Recent Files</string>
    <string name="explore">Explore</string>
    <string name="unknownError">Unknown Error Occurred</string>
    <string name="search">search in this directory</string>
    <string name="numbersSelected">%s selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="folder">Folder</string>
    <string name="file">file</string>
    <string name="submit">Submit</string>
    <string name="nullNameError">File Name must not be empty</string>
    <string name="folderSucessFull">create folder is SuccessFull</string>
    <string name="folderCreateFailed">Creating folder was Failed</string>
    <string name="transferred">transferred</string>
    <string name="done">Done</string>
    <string name="paste">Paste</string>
    <string name="source">from</string>
    <string name="destination">To</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="document">Document</string>
    <string name="audio">Audio</string>

    <string name="usb_connected">tap to Open Usb Device</string>
</resources>